{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 19,
  "lineage": "d778f74f-68cb-61e9-e31c-926a7c87b470",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "duploservices-azdemo1-host1-dohpx",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploservices-azdemo1/providers/Microsoft.Network/networkInterfaces/duploservices-azdemo1-host1-dohpx",
            "internal_domain_name_suffix": "u01rhehzqzsuhep3d455wcakxa.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "duploservices-azdemo1-host1-dohpx",
                "primary": true,
                "private_ip_address": "10.50.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploinfra-demo/providers/Microsoft.Network/virtualNetworks/demo/subnets/default"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-C5-70-36",
            "name": "duploservices-azdemo1-host1-dohpx",
            "private_ip_address": "10.50.1.4",
            "private_ip_addresses": [
              "10.50.1.4"
            ],
            "resource_group_name": "duploservices-azdemo1",
            "tags": {
              "duplo-project": "azdemo1",
              "finalcheck": "val1",
              "vm-spl-tag2": "tenant-val"
            },
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploservices-azdemo1/providers/Microsoft.Compute/virtualMachines/duploservices-azdemo1-host1-dohpx",
            "tf_resource_type": "azurerm_network_interface",
            "tf_resource_var_name": "duploservices-azdemo1-host1-dohpx"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "duploservices-azdemo1-log-aqlg5r",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploservices-azdemo1/providers/Microsoft.Network/networkInterfaces/duploservices-azdemo1-log-aqlg5r",
            "ip_configuration": [
              {
                "name": "duploservices-azdemo1-log-aqlg5r",
                "primary": true,
                "private_ip_address": "10.50.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploinfra-demo/providers/Microsoft.Network/virtualNetworks/demo/subnets/aadds-subnet"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-F5-9A-E1",
            "name": "duploservices-azdemo1-log-aqlg5r",
            "private_ip_address": "10.50.0.4",
            "private_ip_addresses": [
              "10.50.0.4"
            ],
            "resource_group_name": "duploservices-azdemo1",
            "tags": {
              "duplo-project": "azdemo1",
              "finalcheck": "val1",
              "vm-spl-tag2": "tenant-val"
            },
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploservices-azdemo1/providers/Microsoft.Compute/virtualMachines/duploservices-azdemo1-log-aqlg5r",
            "tf_resource_type": "azurerm_network_interface",
            "tf_resource_var_name": "duploservices-azdemo1-log-aqlg5r"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "checkase-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploservices-azdemo1/providers/Microsoft.Network/networkSecurityGroups/checkase-NSG",
            "location": "westus2",
            "name": "checkase-NSG",
            "resource_group_name": "duploservices-azdemo1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "ASE to VNET",
                "destination_address_prefix": "10.50.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ASE-to-VNET",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "ASE-internal-inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ASE-internal-inbound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "10.50.5.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow FTP over port 21",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "21",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-FTP",
                "priority": 140,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow FTPS",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "990",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-FTPS",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow HTTP",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-HTTP",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow HTTPS",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-HTTPS",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow communication to ASE from Load Balancer",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "16001",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-load-balancer-keep-alive",
                "priority": 105,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Azure Storage blob",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound-443",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Azure Storage queue",
                "destination_address_prefix": "10.50.5.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ASE-internal-outbound",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Clock",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "123",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound-NTP",
                "priority": 160,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "DNS",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "53",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound-DNS",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Database",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound-DB",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Outbound 80",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound-80",
                "priority": 140,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "RDP",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10001-10020",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-FTP-Data",
                "priority": 160,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Used to manage ASE from public VIP",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "454-455",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-management",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "AppServiceManagement",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Visual Studio remote debugging",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "4016-4022",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-Remote-Debugging",
                "priority": 170,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "duplo-project": "azdemo1",
              "finalcheck": "val1",
              "vm-spl-tag2": "tenant-val"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            },
            "tf_resource_type": "azurerm_network_security_group",
            "tf_resource_var_name": "checkase-nsg"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "internalase-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploservices-azdemo1/providers/Microsoft.Network/networkSecurityGroups/internalase-NSG",
            "location": "westus2",
            "name": "internalase-NSG",
            "resource_group_name": "duploservices-azdemo1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "ASE to VNET",
                "destination_address_prefix": "10.50.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ASE-to-VNET",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "ASE-internal-inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ASE-internal-inbound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "10.50.6.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow FTP over port 21",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "21",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-FTP",
                "priority": 140,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow FTPS",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "990",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-FTPS",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow HTTP",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-HTTP",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow HTTPS",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-HTTPS",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow communication to ASE from Load Balancer",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "16001",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-load-balancer-keep-alive",
                "priority": 105,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Azure Storage blob",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound-443",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Azure Storage queue",
                "destination_address_prefix": "10.50.6.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ASE-internal-outbound",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Clock",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "123",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound-NTP",
                "priority": 160,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "DNS",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "53",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound-DNS",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Database",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound-DB",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Outbound 80",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound-80",
                "priority": 140,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "RDP",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10001-10020",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-FTP-Data",
                "priority": 160,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Used to manage ASE from public VIP",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "454-455",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-management",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "AppServiceManagement",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Visual Studio remote debugging",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "4016-4022",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-Remote-Debugging",
                "priority": 170,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "duplo-project": "azdemo1",
              "finalcheck": "val1",
              "vm-spl-tag2": "tenant-val"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            },
            "tf_resource_type": "azurerm_network_security_group",
            "tf_resource_var_name": "internalase-nsg"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "checkase-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploservices-azdemo1/providers/Microsoft.Network/routeTables/checkase-Route-Table",
            "location": "westus2",
            "name": "checkase-Route-Table",
            "resource_group_name": "duploservices-azdemo1",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "checkase-route",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploinfra-demo/providers/Microsoft.Network/virtualNetworks/demo/subnets/ase"
            ],
            "tags": {
              "duplo-project": "azdemo1",
              "finalcheck": "val1",
              "vm-spl-tag2": "tenant-val"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            },
            "tf_resource_type": "azurerm_route_table",
            "tf_resource_var_name": "checkase-route-table"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "internalase-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploservices-azdemo1/providers/Microsoft.Network/routeTables/internalase-Route-Table",
            "location": "westus2",
            "name": "internalase-Route-Table",
            "resource_group_name": "duploservices-azdemo1",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "internalase-route",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploinfra-demo/providers/Microsoft.Network/virtualNetworks/demo/subnets/internalase"
            ],
            "tags": {
              "duplo-project": "azdemo1",
              "finalcheck": "val1",
              "vm-spl-tag2": "tenant-val"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            },
            "tf_resource_type": "azurerm_route_table",
            "tf_resource_var_name": "internalase-route-table"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt-azure-managed",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploservices-azdemo1/providers/Microsoft.Network/routeTables/rt-azure-managed",
            "location": "westus2",
            "name": "rt-azure-managed",
            "resource_group_name": "duploservices-azdemo1",
            "route": [
              {
                "address_prefix": "65.55.188.0/24",
                "name": "SqlManagement_0",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "207.68.190.32/27",
                "name": "SqlManagement_1",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "13.106.78.32/27",
                "name": "SqlManagement_2",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "13.106.174.32/27",
                "name": "SqlManagement_3",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "13.106.4.96/27",
                "name": "SqlManagement_4",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "104.214.108.80/32",
                "name": "SqlManagement_5",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.179.184.76/32",
                "name": "SqlManagement_6",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.187.116.202/32",
                "name": "SqlManagement_7",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.177.202.6/32",
                "name": "SqlManagement_8",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "13.66.226.202/32",
                "name": "SqlManagement_9",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "13.66.140.96/27",
                "name": "SqlManagement_10",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "40.78.242.192/27",
                "name": "SqlManagement_11",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "40.78.250.128/27",
                "name": "SqlManagement_12",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "13.78.181.246/32",
                "name": "SqlManagement_13",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "40.65.124.161/32",
                "name": "SqlManagement_14",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "13.66.230.240/32",
                "name": "SqlManagement_15",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "104.40.19.34/32",
                "name": "SqlManagement_16",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "10.50.10.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_subnet-10-50-10-0-24-to-vnetlocal",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "13.64.0.0/11",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-13-64-11-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "13.104.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-13-104-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.33.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-33-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.34.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-34-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.36.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-36-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.40.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-40-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.48.0.0/12",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-48-12-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.64.0.0/10",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-64-10-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.128.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-128-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.135.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-135-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.136.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-136-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.140.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-140-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.143.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-143-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.144.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-144-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.150.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-150-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.160.0.0/12",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-160-12-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.176.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-176-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.180.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-180-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.184.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-184-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.192.0.0/10",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-192-10-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "40.64.0.0/10",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-40-64-10-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.4.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-4-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.8.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-8-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.10.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-10-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.18.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-18-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.51.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-51-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.53.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-53-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.103.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-103-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.104.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-104-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.132.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-132-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.136.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-136-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.138.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-138-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.140.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-140-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.144.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-144-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.96.0.0/12",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-96-12-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.112.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-112-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.125.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-125-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.126.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-126-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.130.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-130-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.132.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-132-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.136.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-136-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.145.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-145-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.146.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-146-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.148.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-148-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.152.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-152-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.160.0.0/11",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-160-11-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.224.0.0/11",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-224-11-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "64.4.0.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-64-4-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "65.52.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-65-52-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "66.119.144.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-66-119-144-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "70.37.0.0/17",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-70-37-17-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "70.37.128.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-70-37-128-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "91.190.216.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-91-190-216-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "94.245.64.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-94-245-64-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "103.9.8.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-103-9-8-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "103.25.156.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-103-25-156-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "103.25.157.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-103-25-157-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "103.25.158.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-103-25-158-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "103.36.96.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-103-36-96-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "103.255.140.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-103-255-140-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "104.40.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-104-40-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "104.146.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-104-146-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "104.208.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-104-208-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "111.221.16.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-111-221-16-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "111.221.64.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-111-221-64-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "129.75.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-129-75-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.107.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-107-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.1.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-1-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.3.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-3-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.5.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-5-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.6.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-6-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.8.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-8-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.12.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-12-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.16.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-16-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.18.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-18-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.21.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-21-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.22.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-22-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.24.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-24-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.32.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-32-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.61.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-61-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.62.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-62-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.64.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-64-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.128.0/17",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-128-17-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "132.245.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-132-245-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "134.170.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-134-170-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "134.177.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-134-177-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "137.116.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-137-116-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "137.135.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-137-135-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "138.91.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-138-91-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "138.196.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-138-196-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "139.217.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-139-217-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "139.219.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-139-219-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "141.251.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-141-251-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "146.147.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-146-147-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "147.243.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-147-243-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "150.171.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-150-171-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "150.242.48.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-150-242-48-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "157.54.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-157-54-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "157.56.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-157-56-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "157.60.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-157-60-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "167.105.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-167-105-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "167.220.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-167-220-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "168.61.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-168-61-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "168.62.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-168-62-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "191.232.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-191-232-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "192.32.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-192-32-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "192.48.225.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-192-48-225-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "192.84.159.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-192-84-159-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "192.84.160.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-192-84-160-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "192.197.157.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-192-197-157-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "193.149.64.0/19",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-193-149-64-19-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "193.221.113.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-193-221-113-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "194.69.96.0/19",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-194-69-96-19-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "194.110.197.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-194-110-197-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "198.105.232.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-198-105-232-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "198.200.130.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-198-200-130-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "198.206.164.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-198-206-164-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.60.28.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-60-28-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.74.210.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-74-210-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.103.90.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-103-90-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.103.122.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-103-122-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.242.32.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-242-32-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.242.48.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-242-48-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "202.89.224.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-202-89-224-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.13.120.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-13-120-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.14.180.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-14-180-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.135.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-135-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.179.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-179-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.181.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-181-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.188.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-188-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.195.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-195-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.196.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-196-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.252.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-252-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.152.18.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-152-18-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.152.140.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-152-140-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.192.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-192-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.194.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-194-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.197.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-197-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.198.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-198-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.200.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-200-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.208.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-208-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.236.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-236-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "205.174.224.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-205-174-224-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "206.138.168.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-206-138-168-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "206.191.224.0/19",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-206-191-224-19-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "207.46.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-207-46-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "207.68.128.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-207-68-128-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "208.68.136.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-208-68-136-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "208.76.44.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-208-76-44-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "208.84.0.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-208-84-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "209.240.192.0/19",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-209-240-192-19-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "213.199.128.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-213-199-128-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "216.32.180.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-216-32-180-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "216.220.208.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-216-220-208-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "23.96.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-23-96-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "42.159.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-42-159-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.13.0.0/17",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-13-17-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.107.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-107-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.116.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-116-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.120.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-120-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.120.128.0/17",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-120-128-17-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.124.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-124-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "102.37.0.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-102-37-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "102.133.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-102-133-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.30.16.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-30-16-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.180.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-180-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/29474c73-cd93-48f0-80ee-9577a54e2227/resourceGroups/duploinfra-demo/providers/Microsoft.Network/virtualNetworks/demo/subnets/duploinfra-azure-managed-sql"
            ],
            "tags": {
              "duplo-project": "azdemo1",
              "finalcheck": "val1",
              "vm-spl-tag2": "tenant-val"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            },
            "tf_resource_type": "azurerm_route_table",
            "tf_resource_var_name": "rt-azure-managed"
          }
        }
      ]
    }
  ]
}